src/objects/User_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipName>User_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Question</label>
        <referenceTo>Item_Question__c</referenceTo>
        <relationshipName>User_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>User_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UAnswer_Text__c</fullName>
        <label>UAnswer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>User_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>BLN User Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Answer__c</columns>
        <columns>Item_Question__c</columns>
        <columns>UAnswer_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UANS-{000000}</displayFormat>
        <label>User Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN User Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>